-Added new sprites for big bone's thorn attacks to make them look better
-Added new color fading effect for big bone's phase transition forcefield
-Defeating big bone will now automatically unlock the catacomb guardian's bestiary entry
-Made orro & boro's thorn pillars taller
-Added a new visual effect for boro's acid breath attack
-Moco, orro, and boro will now drop one sentient heart for each active player in the world the first time you defeat them, instead of only one
-Added a new spawn intro for rot gourd when he is summoned, where he will fall from the sky and slam down where you summoned him from
-Added new sound effects for the cowbell entity


Miscellaneous:

-Spooky mod's pylons now give off colored lighting like vanilla ones do
-The vanilla eerie theme will now play in the spooky forest and swampy cemetery during blood moons
-Resprited the spooky forest and swampy cemetery backgrounds to make them look better
-Added better player following AI for the fuzz bat pet
-Eye valley grass can now grow ambient eye stalks and tentacles naturally


Removals:

-Removed the following enemies from the mod: haunted skull, distended, distended brute, capillary, visitant
-Removed the shadow cowbell and the shadow clump items, the rusty cowbell will now function like the shadow cowbell did after you encounter and get jumpscared by the entity




~BUGS AND OTHER FIXES~

-Fixed the spooky scroll causing the player to spaz out if your cursor was in the middle of your player
-Fixed tortumor and giant tortumor orb projectiles not dealing any damage to players
-Fixed issue where spooky mod's custom trees would draw horribly wrong if you used retro or trippy lighting modes
-Fixed issue where the eye valley biome chest was dropping a monster chest when broken, and not its own item
-Fixed the rotten gourd armor's set bonus not working
-Fixed rot gourd not spawning correctly in multiplayer
-Fixed spooky spirit vanishing when hit in multiplayer

