@@ -60,7 +60,7 @@ namespace Spooky.Content.NPCs.SpookyBiome
 			if (!spawnInfo.Invasion && Main.invasionType == 0 && !Main.pumpkinMoon && !Main.snowMoon && !Main.eclipse &&
             !(player.ZoneTowerSolar || player.ZoneTowerVortex || player.ZoneTowerNebula || player.ZoneTowerStardust))
             {
-                if (player.InModBiome(ModContent.GetInstance<Biomes.SpookyBiomeUg>()) && Main.dayTime && Main.hardMode)
+                if (player.InModBiome(ModContent.GetInstance<Biomes.SpookyBiome>()) && Main.dayTime && Main.hardMode)
                 {
                     return 5f;
                 }
