@@ -14,7 +14,7 @@ namespace Spooky.Content.Projectiles.Sentient
 {
     public class SentientGatligatorGiblet : ModProjectile
     {
-        public static readonly SoundStyle ExplosionSound = new("Spooky/Content/Sounds/SpookyHell/EnemyDeath2", SoundType.Sound);
+        public static readonly SoundStyle ExplosionSound = new("Spooky/Content/Sounds/EggEvent/EnemyDeath2", SoundType.Sound);
 
         public override void SetStaticDefaults()
 		{
