@@ -158,6 +158,7 @@ Enemy & Boss Changes:
 -Moco, orro, and boro will now drop one sentient heart for each active player in the world the first time you defeat them, instead of only one
 -Added a new spawn intro for rot gourd when he is summoned, where he will fall from the sky and slam down where you summoned him from
 -Added new sound effects for the cowbell entity
+-Valley of eyes enemies will no longer drop living fire blocks or the hel-fire yoyo
 
 
 Miscellaneous:
